--- a/src/main/resources/org/example/demo/hospital-add.fxml
+++ b/src/main/resources/org/example/demo/hospital-add.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
-<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.demo.HospitalAddController" alignment="CENTER" spacing="10.0">
+<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.demo.HospitalAddController" alignment="CENTER"
+      spacing="10.0">
     <padding>
         <Insets top="20.0" right="20.0" bottom="20.0" left="20.0"/>
     </padding>
