--- a/src/main/resources/org/example/demo/hospital-search.fxml
+++ b/src/main/resources/org/example/demo/hospital-search.fxml
@@ -4,13 +4,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
 <BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.demo.HospitalSearchController">
+
+
     <top>
-        <VBox spacing="10.0">
-            <padding>
-                <Insets bottom="10.0" left="20.0" right="20.0" top="20.0"/>
-            </padding>
+        <VBox spacing="10.0" alignment="TOP_LEFT">
+            <fx:include source="menubar.fxml"/>
 
             <Label text="Search Hospitals">
                 <font>
@@ -19,16 +18,30 @@
             </Label>
 
             <GridPane hgap="10.0" vgap="10.0">
-                <Label text="Hospital Name:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-                <TextField fx:id="nameField" promptText="Enter hospital name" GridPane.columnIndex="1" GridPane.rowIndex="0" prefWidth="200.0"/>
+                <padding>
+                    <Insets top="10.0" right="20.0" bottom="10.0" left="30.0"/>
+                </padding>
+                <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+                <TextField fx:id="nameField" promptText="Enter hospital name" GridPane.columnIndex="1"
+                           GridPane.rowIndex="0" prefWidth="200.0"/>
 
-                <Label text="Hospital ID:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-                <TextField fx:id="idField" promptText="Enter hospital ID" GridPane.columnIndex="1" GridPane.rowIndex="1" prefWidth="200.0"/>
+                <Label text="Location:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+                <TextField fx:id="locationField" promptText="Enter location" GridPane.columnIndex="1"
+                           GridPane.rowIndex="1" prefWidth="200.0"/>
+
+                <Label text="ID:" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+                <TextField fx:id="idField" promptText="Enter hospital ID" GridPane.columnIndex="1" GridPane.rowIndex="2"
+                           prefWidth="200.0"/>
             </GridPane>
 
             <HBox spacing="10.0">
-                <Button text="Search" onAction="#onSearch" style="-fx-background-color: #5cb85c; -fx-text-fill: white; -fx-padding: 8;"/>
-                <Button text="Clear" onAction="#onClear" style="-fx-background-color: #f0ad4e; -fx-text-fill: white; -fx-padding: 8;"/>
+                <padding>
+                    <Insets top="10.0" right="20.0" bottom="10.0" left="30.0"/>
+                </padding>
+                <Button text="Search" onAction="#onSearch"
+                        style="-fx-background-color: #5cb85c; -fx-text-fill: white; -fx-padding: 8;"/>
+                <Button text="Clear" onAction="#onClear"
+                        style="-fx-background-color: #f0ad4e; -fx-text-fill: white; -fx-padding: 8;"/>
             </HBox>
         </VBox>
     </top>
@@ -40,9 +53,8 @@
                 <TableColumn fx:id="nameColumn" text="Name" prefWidth="300.0"/>
             </columns>
             <BorderPane.margin>
-                <Insets bottom="20.0" left="20.0" right="20.0" top="10.0"/>
+                <Insets bottom="20.0" left="30.0" right="20.0" top="10.0"/>
             </BorderPane.margin>
         </TableView>
     </center>
 </BorderPane>
-
