--- a/src/main/resources/org/example/demo/main-menu.fxml
+++ b/src/main/resources/org/example/demo/main-menu.fxml
@@ -1,54 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
-<VBox alignment="CENTER" spacing="15.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.example.demo.MainMenuController">
-    <padding>
-        <Insets bottom="30.0" left="30.0" right="30.0" top="30.0"/>
-    </padding>
-
-    <Label text="Hospital Management System">
-        <font>
-            <Font name="System Bold" size="24.0"/>
-        </font>
-    </Label>
-
-    <Label text="Main Menu">
-        <font>
-            <Font size="16.0"/>
-        </font>
-    </Label>
-
-    <Button text="Search Hospitals" onAction="#onSearchHospitals" prefWidth="250.0" styleClass="menu-button"/>
-    <Button text="Search Doctors" onAction="#onSearchDoctors" prefWidth="250.0" styleClass="menu-button"/>
-    <Button text="Search Patients" onAction="#onSearchPatients" prefWidth="250.0" styleClass="menu-button"/>
-    <Button text="Search Appointments" onAction="#onSearchAppointments" prefWidth="250.0" styleClass="menu-button"/>
-
-    <Label text="Data Management" style="-fx-padding: 10 0 0 0;">
-        <font>
-            <Font size="14.0"/>
-        </font>
-    </Label>
-
-    <Button text="Create Backup" onAction="#onCreateBackup" prefWidth="250.0" styleClass="menu-button"/>
-    <Button text="Restore Backup" onAction="#onRestoreBackup" prefWidth="250.0" styleClass="menu-button"/>
-    <Button text="View Activity Logs" onAction="#onViewLogs" prefWidth="250.0" styleClass="menu-button"/>
-
-    <Label text="Add New Entity" style="-fx-padding: 10 0 0 0;">
-        <font>
-            <Font size="14.0"/>
-        </font>
-    </Label>
-
-    <Button text="Add Hospital" onAction="#onAddHospital" prefWidth="250.0" styleClass="menu-button"/>
-    <Button text="Add Doctor" onAction="#onAddDoctor" prefWidth="250.0" styleClass="menu-button"/>
-    <Button text="Add Patient" onAction="#onAddPatient" prefWidth="250.0" styleClass="menu-button"/>
-    <Button text="Add Appointment" onAction="#onAddAppointment" prefWidth="250.0" styleClass="menu-button"/>
-
-    <Button text="Exit" onAction="#onExit" prefWidth="250.0" style="-fx-background-color: #d9534f; -fx-text-fill: white; -fx-padding: 10;"/>
-</VBox>
+<BorderPane xmlns:fx="http://javafx.com/fxml" fx:id="mainBorderPane" fx:controller="org.example.demo.MenubarController">
+    <top>
+        <MenuBar>
+            <Menu text="Patients">
+                <MenuItem text="View" onAction="#onSearchPatients"/>
+                <MenuItem text="Add" onAction="#onAddPatient"/>
+            </Menu>
+            <Menu text="Doctors">
+                <MenuItem text="View" onAction="#onSearchDoctors"/>
+                <MenuItem text="Add" onAction="#onAddDoctor"/>
+            </Menu>
+            <Menu text="Hospitals">
+                <MenuItem text="View" onAction="#onSearchHospitals"/>
+                <MenuItem text="Add" onAction="#onAddHospital"/>
+            </Menu>
+            <Menu text="Appointments">
+                <MenuItem text="View" onAction="#onSearchAppointments"/>
+                <MenuItem text="Add" onAction="#onAddAppointment"/>
+            </Menu>
+            <Menu text="Backup">
+                <MenuItem text="Create Backup" onAction="#onCreateBackup"/>
+                <MenuItem text="Restore Backup" onAction="#onRestoreBackup"/>
+            </Menu>
+            <Menu text="Logs">
+                <MenuItem text="View Logs" onAction="#onViewLogs"/>
+                <MenuItem text="Delete Logs" onAction="#onDeleteLogs"/>
+            </Menu>
+            <Menu text="Exit">
+                <MenuItem text="Save And Exit" onAction="#onExit"/>
+            </Menu>
+        </MenuBar>
+    </top>
+    <center>
+        <VBox alignment="CENTER" spacing="15.0">
+            <padding>
+                <Insets bottom="30.0" left="30.0" right="30.0" top="30.0"/>
+            </padding>
+            <Label text="Hospital Management System">
+                <font>
+                    <Font name="System Bold" size="24.0"/>
+                </font>
+            </Label>
+            <Label text="Main Menu">
+                <font>
+                    <Font size="16.0"/>
+                </font>
+            </Label>
+            <Button text="Search Hospitals" onAction="#onSearchHospitals" prefWidth="250.0" styleClass="menu-button"/>
+            <Button text="Search Doctors" onAction="#onSearchDoctors" prefWidth="250.0" styleClass="menu-button"/>
+            <Button text="Search Patients" onAction="#onSearchPatients" prefWidth="250.0" styleClass="menu-button"/>
+            <Button text="Search Appointments" onAction="#onSearchAppointments" prefWidth="250.0"
+                    styleClass="menu-button"/>
+            <Label text="Data Management" style="-fx-padding: 10 0 0 0;">
+                <font>
+                    <Font size="14.0"/>
+                </font>
+            </Label>
+            <Button text="Create Backup" onAction="#onCreateBackup" prefWidth="250.0" styleClass="menu-button"/>
+            <Button text="Restore Backup" onAction="#onRestoreBackup" prefWidth="250.0" styleClass="menu-button"/>
+            <Button text="View Activity Logs" onAction="#onViewLogs" prefWidth="250.0" styleClass="menu-button"/>
+            <Label text="Add New Entity" style="-fx-padding: 10 0 0 0;">
+                <font>
+                    <Font size="14.0"/>
+                </font>
+            </Label>
+            <Button text="Add Hospital" onAction="#onAddHospital" prefWidth="250.0" styleClass="menu-button"/>
+            <Button text="Add Doctor" onAction="#onAddDoctor" prefWidth="250.0" styleClass="menu-button"/>
+            <Button text="Add Patient" onAction="#onAddPatient" prefWidth="250.0" styleClass="menu-button"/>
+            <Button text="Add Appointment" onAction="#onAddAppointment" prefWidth="250.0" styleClass="menu-button"/>
+            <Button text="Exit" onAction="#onExit" prefWidth="250.0"
+                    style="-fx-background-color: #d9534f; -fx-text-fill: white; -fx-padding: 10;"/>
+        </VBox>
+    </center>
+</BorderPane>
