--- a/src/main/resources/org/example/demo/appointment-search.fxml
+++ b/src/main/resources/org/example/demo/appointment-search.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.demo.AppointmentSearchController">
+<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.demo.appointment.AppointmentSearchController">
     <top>
         <VBox spacing="10.0" alignment="TOP_LEFT">
             <Label text="Search Appointments">
