--- a/src/main/resources/org/example/demo/hospital-add.fxml
+++ b/src/main/resources/org/example/demo/hospital-add.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.demo.HospitalAddController" alignment="CENTER"
+<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.demo.hospital.HospitalAddController" alignment="CENTER"
       spacing="10.0">
     <padding>
         <Insets top="20.0" right="20.0" bottom="20.0" left="20.0"/>
