--- a/src/main/resources/org/example/demo/patient-search.fxml
+++ b/src/main/resources/org/example/demo/patient-search.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.demo.PatientSearchController">
+<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.demo.patient.PatientSearchController">
     <top>
         <VBox spacing="10.0" alignment="TOP_LEFT">
             <fx:include source="menubar.fxml"/>
